--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,10 +89,9 @@ find_package(catkin REQUIRED COMPONENTS
 ##     and list every .cfg file to be processed
 
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
+generate_dynamic_reconfigure_options(
+  /home/u/tko_ws/src/navigation/dwa_local_planner/cfg/DWAPlanner.cfg
+)
 
 ###################################
 ## catkin specific configuration ##
@@ -106,7 +105,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ramp_reconfigure_node
-#  CATKIN_DEPENDS dynamic_reconfigure roscpp rospy std_msgs
+ CATKIN_DEPENDS dynamic_reconfigure roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -135,6 +134,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/ramp_reconfigure_node_node.cpp)
+add_executable(reconfigure_node src/reconfigure.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -145,11 +145,15 @@ include_directories(
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(reconfigure_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
+target_link_libraries(reconfigure_node
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
